Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* Keep history of commands

Version 1.3 - 2015-01-22
* Add module parsing
* Add mro parsing
* Add model parsing
* Add Eval interface

Version 1.2 - 2014-07-01
* Changelog file creation