@@ -1,3 +1,5 @@
+* Add method patcher for per model method profiling
+
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
